K8S/Ingress/ingress-srv.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-srv
  namespace: store
  annotations:
    nginx.ingress.kubernetes.io/use-regex: 'true'
spec:
  ingressClassName: nginx
  rules:
  - host: store.com
    http:
      paths:
      - path: /identity
        pathType: Prefix
        backend:
          service:
            name: api-gateway-clusterip-srv
            port:
              number: 80
      - path: /user
        pathType: Prefix
        backend:
          service:
            name: api-gateway-clusterip-srv
            port:
              number: 80
      - path: /item
        pathType: Prefix
        backend:
          service:
            name: api-gateway-clusterip-srv
            port:
              number: 80
      - path: /catalogueitem
        pathType: Prefix
        backend:
          service:
            name: api-gateway-clusterip-srv
            port:
              number: 80
      - path: /itemprice
        pathType: Prefix
        backend:
          service:
            name: api-gateway-clusterip-srv
            port:
              number: 80
      - path: /cart
        pathType: Prefix
        backend:
          service:
            name: api-gateway-clusterip-srv
            port:
              number: 80
      - path: /order
        pathType: Prefix
        backend:
          service:
            name: api-gateway-clusterip-srv
            port:
              number: 80
      - path: /management
        pathType: Prefix
        backend:
          service:
            name: api-gateway-clusterip-srv
            port:
              number: 80
      - path: /metrics
        pathType: Prefix
        backend:
          service:
            name: api-gateway-clusterip-srv
            port:
              number: 80
      # Seq Logging UI
      - path: /logging
        pathType: Prefix
        backend:
          service:
            name: seq-logging-clusterip-srv
            port:
              number: 80
      # # Seq Ingestion API
      # - path: /ingest
      #   pathType: Prefix
      #   backend:
      #     service:
      #       name: seq-logging-clusterip-srv
      #       port:
      #         number: 5341
